fix/ alignment of buttens

--- a/src/app/shared/post/post.component.css
+++ b/src/app/shared/post/post.component.css
@@ -6,6 +6,15 @@
     margin-top: 20px;
     margin-bottom: 45px;
 }
+.postHeader{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.buttons{
+    margin-right: 20px;
+}
 .postImage{
     width: 100%;
     object-fit: contain;
